@@ -34,4 +34,9 @@
   	<ivy:settings id="test2" file="test/repositories/ivysettings.xml" override="false" />
   	<ivy:resolve settingsRef="test2" file="test/java/org/apache/ivy/ant/ivy-simple.xml" />
   </target>
+	  
+  <target name="testUnnecessaryDefaultIvyInstance">
+	  	<ivy:settings id="testUnnecessaryDefaultIvyInstance" file="test/repositories/ivysettings.xml" override="true" />
+	  	<ivy:cachepath settingsRef="testUnnecessaryDefaultIvyInstance" file="test/java/org/apache/ivy/ant/ivy-simple.xml" pathid="ptest" />
+	  </target>
 </project>
